quixit/quixit.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: quixit
 namespace: quixit
 labels:
  app: quixit
spec:
 replicas: 1
 revisionHistoryLimit: 3
 strategy:
  type: RollingUpdate
 selector:
  matchLabels:
   app: quixit
 template:
  metadata:
   labels:
    app: quixit
  spec:
   containers:
    - name: quixit
      image: filebrowser/filebrowser:v2.32.0
      imagePullPolicy: IfNotPresent
      volumeMounts:
       - name: quixit
         mountPath: /srv
         subPath: files
       - name: quixit
         mountPath: /database
         subPath: database
       - name: quixit
         mountPath: /branding
         subPath: branding
       - name: quixit-scripts
         mountPath: /scripts
      ports:
       - name: http
         containerPort: 44301
         protocol: TCP
      resources:
       requests:
        cpu: 500m
        memory: 512Mi
       limits:
        memory: 512Mi
      command: ['/bin/sh', '-c', '/scripts/init-quixit.sh']
   volumes:
    - name: quixit
      persistentVolumeClaim:
       claimName: quixit
    - name: quixit-scripts
      configMap:
       name: quixit-scripts
       defaultMode: 0755
