quixit/quixit.service.yml
apiVersion: v1
kind: Service
metadata:
  name: quixit
  namespace: quixit
spec:
  selector:
    app: quixit
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
